# sdl_gui

./: CMakeLists.txt  readme.md
data/demo/img/: anim.xcf  direction_btn.xcf  fx.xcf  minus_btn.xcf  pause_btn.xcf  play_btn.xcf  plus_btn.xcf  reset_btn.xcf  stop_btn.xcf
src/: CMakeLists.txt
src/demo/: CMakeLists.txt  animation_panel.cpp  animation_panel.hpp  bars_panel.cpp  bars_panel.hpp  buttons_panel.cpp  buttons_panel.hpp  constants.hpp  main.cpp  others_panel.cpp  others_panel.hpp  sdl_gui_demo.cpp  sdl_gui_demo.hpp  sdl_init.cpp  sdl_init.hpp  utils.hpp
src/sdl_gui/: CMakeLists.txt
src/sdl_gui/include/: sdl_gui_base_button.hpp  sdl_gui_basic_frame_animation.hpp  sdl_gui_box_collider.hpp  sdl_gui_button.hpp  sdl_gui_button_transition.hpp  sdl_gui_button_transition_colour.hpp  sdl_gui_button_transition_multi_image.hpp  sdl_gui_button_transition_none.hpp  sdl_gui_button_transition_single_image.hpp  sdl_gui_camera.hpp  sdl_gui_checkbox.hpp  sdl_gui_checkbox_group.hpp  sdl_gui_circle_collider.hpp  sdl_gui_collider.hpp  sdl_gui_constants.hpp  sdl_gui_deleters.hpp  sdl_gui_element.hpp  sdl_gui_enums.hpp  sdl_gui_font.hpp  sdl_gui_hslider.hpp  sdl_gui_image.hpp  sdl_gui_label.hpp  sdl_gui_layout.hpp  sdl_gui_local_texture.hpp  sdl_gui_log.hpp  sdl_gui_manager.hpp  sdl_gui_menu_item.hpp  sdl_gui_menu_layout.hpp  sdl_gui_mouse_interaction.hpp  sdl_gui_progress_bar.hpp  sdl_gui_resource_manager.hpp  sdl_gui_scroll_box.hpp  sdl_gui_selectable_button.hpp  sdl_gui_selectable_group.hpp  sdl_gui_structs.hpp  sdl_gui_textbox.hpp  sdl_gui_texture.hpp  sdl_gui_texture_utils.hpp  sdl_gui_tooltip.hpp  sdl_gui_transform.hpp  (+5 more)
src/sdl_gui/src/: sdl_gui_base_button.cpp  sdl_gui_basic_frame_animation.cpp  sdl_gui_box_collider.cpp  sdl_gui_button.cpp  sdl_gui_button_transition_colour.cpp  sdl_gui_button_transition_multi_image.cpp  sdl_gui_button_transition_none.cpp  sdl_gui_button_transition_single_image.cpp  sdl_gui_camera.cpp  sdl_gui_checkbox.cpp  sdl_gui_checkbox_group.cpp  sdl_gui_circle_collider.cpp  sdl_gui_collider.cpp  sdl_gui_deleters.cpp  sdl_gui_element.cpp  sdl_gui_font.cpp  sdl_gui_hslider.cpp  sdl_gui_image.cpp  sdl_gui_label.cpp  sdl_gui_layout.cpp  sdl_gui_local_texture.cpp  sdl_gui_log.cpp  sdl_gui_manager.cpp  sdl_gui_menu_item.cpp  sdl_gui_menu_layout.cpp  sdl_gui_mouse_interaction.cpp  sdl_gui_progress_bar.cpp  sdl_gui_resource_manager.cpp  sdl_gui_scroll_box.cpp  sdl_gui_selectable_button.cpp  sdl_gui_selectable_group.cpp  sdl_gui_textbox.cpp  sdl_gui_texture.cpp  sdl_gui_texture_utils.cpp  sdl_gui_tooltip.cpp  sdl_gui_transform.cpp  sdl_gui_uid.cpp  sdl_gui_utf8.cpp  sdl_gui_utils.cpp  sdl_gui_vscrollbar.cpp  (+1 more)
vs/sdl_gui/: sdl_gui.sln
vs/sdl_gui/sdl_gui/: sdl_gui.vcxproj  sdl_gui.vcxproj.filters
