#list of cpp files

set(DEMO_SOURCE_FILES "")
set(DEMO_HEADER_FILES "")
set(DEMO_INCLUDE_DIRECTORIES "")

set(GUI_SOURCE_FILES_TMP "")
set(GUI_HEADER_FILES_TMP "")
set(GUI_INCLUDE_DIRECTORIES_TMP "")

#Get files for demo
add_subdirectory(demo)
get_directory_property(DEMO_INCLUDE_DIRECTORIES DIRECTORY demo DEFINITION DEMO_INCLUDE_DIRECTORIES)#INCLUDE_DIRECTORIES
get_directory_property(DEMO_SOURCE_FILES DIRECTORY demo DEFINITION DEMO_SOURCE_FILES)#SOURCE_FILES
get_directory_property(DEMO_HEADER_FILES DIRECTORY demo DEFINITION DEMO_HEADER_FILES)#HEADER_FILES


#Get sdl_gui files
add_subdirectory(sdl_gui)
get_directory_property(GUI_INCLUDE_DIRECTORIES DIRECTORY sdl_gui DEFINITION GUI_INCLUDE_DIRECTORIES)#INCLUDE_DIRECTORIES
get_directory_property(GUI_SOURCE_FILES DIRECTORY sdl_gui DEFINITION GUI_SOURCE_FILES)#SOURCE_FILES
get_directory_property(GUI_HEADER_FILES DIRECTORY sdl_gui DEFINITION GUI_HEADER_FILES)#HEADER_FILES
